--- a/exercise1/package.json
+++ b/exercise1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development",
-    "prod": "webpack --env.mode production"
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
