--- a/exercise2/package.json
+++ b/exercise2/package.json
@@ -25,5 +25,8 @@
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@vaadin/vaadin-button": "^2.4.0"
   }
 }
